Successful Media Library Integration with PayloadCMS

--- a/apps/cms/.env.example
+++ b/apps/cms/.env.example
@@ -1,2 +1,9 @@
 DATABASE_URI=mongodb://127.0.0.1/your-database-name
 PAYLOAD_SECRET=YOUR_SECRET_HERE
+
+# Cloudinary Configuration (Client-side)
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=<YOUR_CLOUDINARY_CLOUD_NAME>
+
+# Cloudinary Configuration (Server-side)
+CLOUDINARY_API_KEY=<YOUR_CLOUDINARY_API_KEY>
+CLOUDINARY_API_SECRET=<YOUR_CLOUDINARY_API_SECRET>
