--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -21,8 +21,10 @@
     "@payloadcms/db-postgres": "3.50.0",
     "@payloadcms/next": "3.50.0",
     "@payloadcms/payload-cloud": "3.50.0",
+    "@payloadcms/plugin-cloud-storage": "^3.52.0",
     "@payloadcms/richtext-lexical": "3.50.0",
     "@payloadcms/ui": "3.50.0",
+    "cloudinary": "^2.6.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
