--- a/packages/shared-auth/package.json
+++ b/packages/shared-auth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tap2go/shared-auth",
   "version": "0.1.0",
-  "description": "Shared Firebase authentication package for Tap2Go monorepo",
+  "description": "Shared authentication package for Tap2Go monorepo",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
@@ -11,8 +11,6 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "firebase": "^11.8.1",
-    "@tap2go/firebase-config": "workspace:*",
     "@tap2go/database": "workspace:*",
     "@tap2go/shared-types": "workspace:*",
     "react": "^19.0.0"
