--- a/apps/web-admin/vercel.json
+++ b/apps/web-admin/vercel.json
@@ -5,6 +5,7 @@
   "installCommand": "pnpm install",
   "env": {
     "NODE_VERSION": "20",
+    "PNPM_VERSION": "9.12.3",
     "NEXT_TELEMETRY_DISABLED": "1"
   }
 }
