--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,14 @@
   "env": {
     "VERCEL": "1",
     "NODE_VERSION": "20",
-    "PNPM_VERSION": "9.12.3"
+    "PNPM_VERSION": "9.12.3",
+    "COREPACK_ENABLE_STRICT": "0"
   },
   "build": {
     "env": {
       "VERCEL": "1",
-      "NEXT_TELEMETRY_DISABLED": "1"
+      "NEXT_TELEMETRY_DISABLED": "1",
+      "COREPACK_ENABLE_STRICT": "0"
     }
   },
   "headers": [
