--- a/apps/web-admin/vercel.json
+++ b/apps/web-admin/vercel.json
@@ -2,10 +2,11 @@
   "version": 2,
   "framework": "nextjs",
   "buildCommand": "turbo run build",
-  "installCommand": "npm install -g pnpm@9.12.3 && pnpm install",
+  "installCommand": "corepack enable && corepack prepare pnpm@9.12.3 --activate && pnpm install",
   "env": {
     "NODE_VERSION": "20",
     "PNPM_VERSION": "9.12.3",
-    "NEXT_TELEMETRY_DISABLED": "1"
+    "NEXT_TELEMETRY_DISABLED": "1",
+    "COREPACK_ENABLE_STRICT": "0"
   }
 }
