--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,9 @@
     "env": {
       "VERCEL": "1",
       "NEXT_TELEMETRY_DISABLED": "1",
-      "COREPACK_ENABLE_STRICT": "0"
+      "COREPACK_ENABLE_STRICT": "0",
+      "NODE_VERSION": "20",
+      "PNPM_VERSION": "9.12.3"
     }
   },
   "headers": [
