--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     ]
   },
   "engines": {
-    "node": "18.x || 20.x || 22.x",
+    "node": "18.x",
     "npm": ">=8.0.0",
     "pnpm": ">=9.0.0"
   }
