--- a/apps/web-admin/vercel.json
+++ b/apps/web-admin/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "framework": "nextjs",
   "buildCommand": "turbo run build",
-  "installCommand": "npm install -g pnpm@9.12.3 && hash -r && pnpm install",
+  "installCommand": "npm install -g pnpm@9.12.3 && export PATH=\"$(npm config get prefix)/bin:$PATH\" && pnpm install",
   "env": {
-    "NODE_VERSION": "18",
+    "NODE_VERSION": "22",
     "PNPM_VERSION": "9.12.3",
     "NEXT_TELEMETRY_DISABLED": "1",
     "COREPACK_ENABLE_STRICT": "0"
