--- a/apps/web-admin/vercel.json
+++ b/apps/web-admin/vercel.json
@@ -1,12 +1,11 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "turbo run build",
-  "installCommand": "npm install -g pnpm@9.12.3 && export PATH=\"$(npm config get prefix)/bin:$PATH\" && pnpm install",
+  "buildCommand": "npx pnpm@9.12.3 run build",
+  "installCommand": "npx pnpm@9.12.3 install",
   "env": {
     "NODE_VERSION": "22",
     "PNPM_VERSION": "9.12.3",
-    "NEXT_TELEMETRY_DISABLED": "1",
     "COREPACK_ENABLE_STRICT": "0"
   }
 }
