--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -21,6 +21,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.468.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
