--- a/apps/web-admin/vercel.json
+++ b/apps/web-admin/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "npx pnpm@9.12.3 run build",
-  "installCommand": "npx pnpm@9.12.3 install",
+  "buildCommand": "cd ../.. && npx pnpm@9.12.3 run build --filter=web-admin",
+  "installCommand": "cd ../.. && npx pnpm@9.12.3 install",
+  "rootDirectory": "apps/web-admin",
   "env": {
     "NODE_VERSION": "22",
     "PNPM_VERSION": "9.12.3",
