--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     ]
   },
   "engines": {
-    "node": "22.x",
-    "npm": ">=8.0.0"
+    "node": "^18.20.2 || >=20.9.0",
+    "npm": ">=8.0.0",
+    "pnpm": ">=6.35.1"
   }
 }
