--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,7 +1,7 @@
 # ========================================
 # WEB APP SPECIFIC ENVIRONMENT VARIABLES
 # ========================================
-NEXT_PUBLIC_API_URL=https://grandline-cms.vercel.app/api
+NEXT_PUBLIC_API_URL=https://cms.tap2goph.com/api
 
 # Debug Configuration
 NEXT_PUBLIC_DEBUG_FORMS=false
