--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
-    "dev:turbo": "next dev --turbopack",
+    "dev": "next dev -p 3002",
+    "dev:turbo": "next dev --turbopack -p 3002",
     "lint": "next lint",
     "start": "next start",
     "type-check": "tsc --noEmit"
