--- a/packages/cms-types/package.json
+++ b/packages/cms-types/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@encreasl/eslint-config": "workspace:*",
     "@encreasl/typescript-config": "workspace:*",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^20",
     "eslint": "^9",
     "typescript": "^5"
