--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@encreasl/ui": "workspace:*",
     "@eslint/js": "^9",
     "@tailwindcss/postcss": "^4",
+    "@types/google.maps": "^3.58.1",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
