--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@encreasl/redux": "workspace:*",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
