--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@encreasl/redux": "workspace:*",
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "lucide-react": "^0.263.1",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
