--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@encreasl/eslint-config": "workspace:*",
     "@encreasl/typescript-config": "workspace:*",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^20",
     "eslint": "^9",
     "typescript": "^5"
