--- a/packages/env/tsconfig.json
+++ b/packages/env/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../typescript-config/base.json",
+  "compilerOptions": {
+    "skipLibCheck": true,
+    "types": ["node"]
+  },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
