--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,15 +17,16 @@
     "@encreasl/eslint-config": "workspace:*",
     "@encreasl/typescript-config": "workspace:*",
     "@eslint/js": "^9",
-    "@typescript-eslint/eslint-plugin": "^8",
-    "@typescript-eslint/parser": "^8",
+    "@types/minimatch": "^6.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
     "eslint": "^9",
     "typescript": "^5"
   },
   "peerDependencies": {
-    "react": "^19.1.0",
-    "@types/react": "^19"
+    "@types/react": "^19",
+    "react": "^19.1.0"
   }
 }
