--- a/apps/cms/.env.example
+++ b/apps/cms/.env.example
@@ -7,7 +7,8 @@ PAYLOAD_SECRET=<YOUR_PAYLOAD_SECRET>
 # Environment
 NODE_ENV=development
 
-
+# Google Maps API Configuration
+GOOGLE_MAPS_API_KEY=<YOUR_GOOGLE_MAPS_API_KEY>
 
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=<YOUR_SUPABASE_URL>
