--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -34,6 +34,7 @@
     "drizzle-orm": "^0.44.5",
     "graphql": "^16.8.1",
     "next": "15.0.0",
+    "node-fetch": "^3.3.2",
     "payload": "3.49.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
