--- a/apps/cms/.env.example
+++ b/apps/cms/.env.example
@@ -1,6 +1,14 @@
 # Database Configuration
 DATABASE_URI=postgresql://<USER>:<PASSWORD>@<HOST>:<PORT>/<DATABASE>
 
+# Database Connection Pool Configuration (Performance Optimization)
+DATABASE_POOL_MAX=20
+DATABASE_POOL_MIN=5
+DATABASE_IDLE_TIMEOUT=30000
+DATABASE_CONNECTION_TIMEOUT=10000
+DATABASE_ACQUIRE_TIMEOUT=60000
+DATABASE_MAX_USES=7500
+
 # Payload CMS Configuration
 PAYLOAD_SECRET=<YOUR_PAYLOAD_SECRET>
 
