--- a/apps/cms/Dockerfile
+++ b/apps/cms/Dockerfile
@@ -10,7 +10,11 @@ RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
-COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+# Copy package.json from current directory and lockfiles from monorepo root
+COPY package.json ./
+COPY ../../pnpm-lock.yaml* ./
+COPY ../../yarn.lock* ./
+COPY ../../package-lock.json* ./
 RUN \
   if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
   elif [ -f package-lock.json ]; then npm ci; \
