--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -41,7 +41,11 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "0.34.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "@types/node": "^22.5.4",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.0",
+    "typescript": "5.7.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -49,9 +53,6 @@
     "@playwright/test": "1.50.0",
     "@testing-library/react": "16.3.0",
     "@types/minimatch": "^6.0.0",
-    "@types/node": "^22.5.4",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "@vitejs/plugin-react": "4.5.2",
@@ -63,7 +64,6 @@
     "playwright-core": "1.50.0",
     "prettier": "^3.4.2",
     "turbo": "^2.0.0",
-    "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.3"
   },
