--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -43,7 +43,7 @@
     "sharp": "0.34.2",
     "ts-node": "^10.9.2",
     "@types/node": "^22.5.4",
-    "@types/react": "19.1.0",
+    "@types/react": "~19.0.10",
     "@types/react-dom": "19.1.0",
     "typescript": "5.7.3"
   },
