--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "@encreasl/typescript-config/nextjs",
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es2017",
     "skipLibCheck": true,
     "strict": false,
     "jsx": "preserve",
+    "noEmit": true,
     "paths": {
       "@/*": [
         "./src/*"
