--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd ../.. && pnpm turbo run build --filter=@encreasl/web",
+  "buildCommand": "cd ../.. && pnpm turbo run build --filter=web",
   "installCommand": "cd ../.. && pnpm install",
   "framework": "nextjs",
 
