Updated NextJS into 16x

--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "cross-env NODE_ENV=production NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
+    "build": "cross-env NODE_ENV=production NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build --webpack",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev -p 3001",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
@@ -34,7 +34,7 @@
     "dotenv": "16.4.7",
     "drizzle-orm": "^0.44.5",
     "graphql": "^16.8.1",
-    "next": "15.0.0",
+    "next": "16.0.7",
     "node-fetch": "^3.3.2",
     "payload": "3.49.0",
     "pg": "^8.16.3",
@@ -58,7 +58,7 @@
     "@vitejs/plugin-react": "4.5.2",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9.16.0",
-    "eslint-config-next": "15.4.2",
+    "eslint-config-next": "16.0.7",
     "jsdom": "26.1.0",
     "playwright": "1.50.0",
     "playwright-core": "1.50.0",
