Improved Payment Methods

--- a/apps/cms/.env.example
+++ b/apps/cms/.env.example
@@ -44,3 +44,8 @@ CMS_PROD_URL=https://cms.yourdomain.com
 
 # Cookie Configuration
 COOKIE_DOMAIN=.yourdomain.com
+
+# PayMongo Configuration
+PAYMONGO_PUBLIC_KEY_LIVE=<YOUR_PAYMONGO_PUBLIC_KEY_LIVE>
+PAYMONGO_SECRET_KEY_LIVE=<YOUR_PAYMONGO_SECRET_KEY_LIVE>
+PAYMONGO_WEBHOOK_SECRET=<YOUR_PAYMONGO_WEBHOOK_SECRET>
