--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -3,25 +3,13 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "dev": "node start-enterprise.js",
-    "start": "node start-enterprise.js",
-    "android": "node start-enterprise.js --android",
-    "ios": "node start-enterprise.js --ios",
-    "web": "node start-enterprise.js --web",
-    "start-enterprise": "node start-enterprise.js",
-    "start-safe": "node fix-expo-cache.js",
-    "start-fallback": "copy metro.config.fallback.js metro.config.js && node fix-expo-cache.js",
-    "start-original": "npx expo start",
-    "start-expo-go": "npx expo start --go",
-    "cache:validate": "node scripts/enterprise-cache-manager.js validate",
-    "cache:clean": "node scripts/enterprise-cache-manager.js clean",
-    "cache:optimize": "node scripts/enterprise-cache-manager.js optimize",
-    "cache:reset": "node scripts/enterprise-cache-manager.js full-reset",
-    "cache:legacy-clean": "node scripts/metro-cache-manager.js clean",
-    "cache:legacy-validate": "node scripts/metro-cache-manager.js validate",
-    "cache:legacy-fix-deps": "node scripts/metro-cache-manager.js fix-deps",
-    "clear-cache": "pnpm run cache:clean && pnpm start",
-    "reset-metro": "pnpm run cache:reset && pnpm start",
+    "dev": "expo start",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "start-expo-go": "expo start --go",
+    "lint": "pnpm exec eslint src App.tsx index.ts --ext .js,.ts,.tsx",
     "type-check": "tsc --noEmit",
     "build:android:apk": "npx expo prebuild --platform android && cd android && ./gradlew assembleRelease",
     "build:android:aab": "npx expo prebuild --platform android && cd android && ./gradlew bundleRelease",
@@ -34,10 +22,11 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.27.4",
     "@babel/runtime": "^7.27.6",
-    "@expo/config-plugins": "~10.1.1",
-    "@expo/metro-runtime": "~5.0.4",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@encreasl/client-services": "workspace:*",
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.3",
+    "@hookform/resolvers": "^5.2.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native/assets-registry": "^0.79.4",
     "@react-native/normalize-colors": "^0.79.4",
     "@react-native/virtualized-lists": "^0.79.4",
@@ -59,22 +48,21 @@
     "decode-uri-component": "^0.4.1",
     "escape-string-regexp": "^5.0.0",
     "event-target-shim": "^5.0.0",
-    "expo": "53.0.17",
-    "expo-asset": "^11.1.7",
-    "expo-build-properties": "~0.14.8",
-    "expo-constants": "^17.1.7",
-    "expo-dev-client": "^5.2.4",
-    "expo-file-system": "^18.1.11",
-    "expo-font": "^13.3.2",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "^7.1.7",
-    "expo-navigation-bar": "^4.2.7",
-    "expo-router": "~5.1.3",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "^5.0.10",
+    "expo": "^54.0.0",
+    "expo-asset": "^12.0.12",
+    "expo-build-properties": "~1.0.10",
+    "expo-constants": "~18.0.13",
+    "expo-dev-client": "^6.0.20",
+    "expo-file-system": "^19.0.21",
+    "expo-font": "^14.0.11",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "^8.0.11",
+    "expo-navigation-bar": "^5.0.10",
+    "expo-router": "~6.0.22",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "^6.0.9",
     "fbjs": "^3.0.5",
     "filter-obj": "^6.1.0",
-
     "hoist-non-react-statics": "^3.3.2",
     "ieee754": "^1.2.1",
     "invariant": "^2.2.4",
@@ -88,42 +76,45 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-freeze": "^1.0.0",
+    "react-hook-form": "^7.53.2",
     "react-is": "^18.3.1",
-    "react-native": "0.79.5",
-    "react-native-edge-to-edge": "^1.6.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native": "0.81.5",
+    "react-native-edge-to-edge": "1.6.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-is-edge-to-edge": "^1.1.4",
     "react-native-maps": "1.20.1",
-    "react-native-reanimated": "3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-reanimated": "4.1.6",
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
+    "react-native-web": "^0.21.2",
     "react-native-web-linear-gradient": "^1.1.2",
+    "react-native-worklets": "0.5.1",
     "regenerator-runtime": "^0.14.1",
     "scheduler": "^0.25.0",
     "simple-swizzle": "^0.2.2",
     "split-on-first": "^3.0.0",
     "stacktrace-parser": "^0.1.10",
-    "typescript": "~5.8.3",
     "use-latest-callback": "^0.2.1",
     "use-sync-external-store": "^1.2.0",
     "warn-once": "^0.1.1",
     "webidl-conversions": "^7.0.0",
     "whatwg-fetch": "^3.0.0",
-    "whatwg-url-without-unicode": "^8.0.0-3"
+    "whatwg-url-without-unicode": "^8.0.0-3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
-    "@expo/cli": "^0.24.18",
+    "@expo/cli": "54.0.22",
     "@react-native-community/cli": "^18.0.0",
-    "@types/react": "~19.0.10",
-    "babel-preset-expo": "~13.0.0",
+    "@types/react": "~19.1.17",
+    "babel-preset-expo": "~54.0.10",
+    "eslint-config-expo": "^10.0.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "3.3.2",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.3"
   },
   "expo": {
     "doctor": {
