--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@encreasl/client-services": "workspace:*",
     "@encreasl/redux": "workspace:*",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@react-google-maps/api": "^2.20.8",
