--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -81,6 +81,7 @@
     "react-native": "0.81.5",
     "react-native-edge-to-edge": "1.6.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-google-places-autocomplete": "^2.6.4",
     "react-native-is-edge-to-edge": "^1.1.4",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "4.1.6",
