Successful App Upload

--- a/apps/mobile-customer/eas.json
+++ b/apps/mobile-customer/eas.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "version": ">= 16.0.0",
-    "appVersionSource": "remote"
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
@@ -32,6 +32,18 @@
       "android": {
         "buildType": "app-bundle",
         "gradleCommand": ":app:bundleRelease"
+      },
+      "env": {
+        "NODE_ENV": "production",
+        "EAS_BUILD": "true",
+        "EXPO_USE_METRO_WORKSPACE_ROOT": "1",
+        "METRO_CONFIG": "./metro.config.eas.js"
+      }
+    },
+    "production-apk": {
+      "android": {
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease"
       },
       "env": {
         "NODE_ENV": "production",
