--- a/apps/mobile-customer/app.json
+++ b/apps/mobile-customer/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Tap2Go Customer",
     "slug": "tap2go-mobile-customer",
-    "version": "1.0.0",
+    "version": "2.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -24,7 +24,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#f3a823"
       },
-      "package": "com.tap2go.mobile",
+      "package": "com.wnapp.id1721090048598",
+      "versionCode": 5,
       "userInterfaceStyle": "light",
       "edgeToEdgeEnabled": true,
       "permissions": [
@@ -45,7 +46,7 @@
         {
           "android": {
             "compileSdkVersion": 35,
-            "targetSdkVersion": 34,
+            "targetSdkVersion": 35,
             "buildToolsVersion": "35.0.0",
             "minSdkVersion": 24
           },
@@ -61,9 +62,9 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "515473d1-6725-437f-9f9c-171b2aad6c8b"
+        "projectId": "d7681f1c-f3dc-4c48-aa50-1ab34b79ea2e"
       }
     },
-    "owner": "tap2go9r"
+    "owner": "johnlloydcallao"
   }
 }
