--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@turbo/gen": "^2.0.0",
     "@types/minimatch": "^6.0.0",
+    "eas-cli": "^16.12.0",
     "next": "16.0.7",
     "turbo": "^2.0.0",
     "typescript": "5.8.3"
