--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "expo start",
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "start-expo-go": "expo start --go",
     "lint": "pnpm exec eslint src App.tsx index.ts --ext .js,.ts,.tsx",
@@ -38,6 +38,7 @@
     "@react-navigation/stack": "^7.3.6",
     "abort-controller": "^3.0.0",
     "ansi-regex": "^6.1.0",
+    "babel-preset-expo": "~54.0.10",
     "base64-js": "^1.5.1",
     "buffer": "^6.0.3",
     "color": "^4.2.3",
@@ -48,8 +49,7 @@
     "decode-uri-component": "^0.4.1",
     "escape-string-regexp": "^5.0.0",
     "event-target-shim": "^5.0.0",
-    "expo": "^54.0.0",
-    "babel-preset-expo": "~54.0.10",
+    "expo": "~54.0.33",
     "expo-asset": "^12.0.12",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.13",
@@ -59,7 +59,7 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "^8.0.11",
     "expo-navigation-bar": "^5.0.10",
-    "expo-router": "~6.0.22",
+    "expo-router": "~6.0.23",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "^6.0.9",
     "fbjs": "^3.0.5",
@@ -93,7 +93,6 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.2",
     "react-native-web-linear-gradient": "^1.1.2",
-    "react-native-worklets": "0.5.1",
     "regenerator-runtime": "^0.14.1",
     "scheduler": "^0.25.0",
     "simple-swizzle": "^0.2.2",
