--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "overrides": {
       "@react-native-async-storage/async-storage": "2.2.0",
       "@types/react": "~19.1.17",
-      "babel-preset-expo": "~54.0.10"
+      "babel-preset-expo": "~54.0.10",
+      "tailwindcss": "3.3.2"
     },
     "peerDependencyRules": {
       "allowedVersions": {
