--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "start-expo-go": "expo start --go",
-    "lint": "pnpm exec eslint src App.tsx index.ts --ext .js,.ts,.tsx",
+    "lint": "pnpm exec eslint src App.tsx index.ts",
     "type-check": "tsc --noEmit",
     "build:android:apk": "npx expo prebuild --platform android && cd android && ./gradlew assembleRelease",
     "build:android:aab": "npx expo prebuild --platform android && cd android && ./gradlew bundleRelease",
@@ -111,6 +111,7 @@
     "@expo/cli": "54.0.22",
     "@react-native-community/cli": "^18.0.0",
     "@types/react": "~19.1.17",
+    "eslint": "^9",
     "eslint-config-expo": "^10.0.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "3.3.2",
