--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build:apps": "turbo run build --filter=\"./apps/*\"",
     "build:parallel": "turbo run build --parallel",
     "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "lint:fix": "turbo run lint -- --fix",
+    "lint": "turbo run lint --concurrency=6",
+    "lint:packages": "turbo run lint --filter=\"./packages/*\"",
+    "lint:apps": "turbo run lint --filter=\"./apps/*\"",
+    "lint:fix": "turbo run lint --concurrency=6 -- --fix",
     "clean": "turbo run clean",
     "sync-env": "node scripts/sync-env.js",
     "postinstall": "node scripts/sync-env.js",
