--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,6 +2,11 @@
   "name": "@encreasl/eslint-config",
   "version": "0.1.0",
   "private": true,
+  "main": "base.js",
+  "exports": {
+    "./base": "./base.js",
+    "./nextjs": "./nextjs.js"
+  },
   "files": [
     "base.js",
     "nextjs.js"
