--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "zencoder.enableRepoIndexing": true,
-    "markdown.validate.enabled": true
+    "markdown.validate.enabled": true,
+    "css.validate": false,
+    "scss.validate": false,
+    "less.validate": false
 }
