--- a/apps/web-admin/package.json
+++ b/apps/web-admin/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "dev": "next dev -p 3002",
     "dev:turbo": "next dev --turbopack -p 3002",
-    "lint": "next lint",
+    "lint": "eslint .",
     "start": "next start",
     "type-check": "tsc --noEmit"
   },
