--- a/apps/web-driver/package.json
+++ b/apps/web-driver/package.json
@@ -7,7 +7,7 @@
     "dev:turbo": "next dev --turbopack -p 3003",
     "build": "next build",
     "start": "next start -p 3003",
-    "lint": "next lint",
+    "lint": "eslint .",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
@@ -24,7 +24,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.18",
-    "eslint": "^8.57.0",
+    "eslint": "^9",
+    "@eslint/js": "^9",
+    "@encreasl/eslint-config": "workspace:*",
     "eslint-config-next": "15.2.3",
     "minimatch": "^10.1.1",
     "tailwindcss": "^4",
