--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "3.3.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "turbo": "^2.0.0",
     "typescript": "^5"
   }
