--- a/apps/mobile-customer/package.json
+++ b/apps/mobile-customer/package.json
@@ -36,6 +36,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/routers": "^7.1.14",
     "@react-navigation/stack": "^7.3.6",
+    "@tanstack/react-query": "^5.90.21",
     "abort-controller": "^3.0.0",
     "ansi-regex": "^6.1.0",
     "babel-preset-expo": "~54.0.10",
