--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@encreasl/redux": "workspace:*",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@react-google-maps/api": "^2.20.8",
+    "@tanstack/react-query": "^5.90.21",
     "lucide-react": "^0.263.1",
     "next": "16.0.7",
     "react": "19.1.0",
@@ -35,11 +36,11 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
-    "tailwindcss": "3.3.2",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "tailwindcss": "3.3.2",
     "turbo": "^2.0.0",
     "typescript": "^5"
   }
